--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <head th:replace="common/header :: common-header"></head>
 
-<div th:replace="common/nahbar :: common-navbar"></div>
+<div th:replace="common/navbar :: common-navbar"></div>
 
 <body>
 
