--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
+            <h1 th:text="#{index.main.callout}"></h1>
             <p>First paragraph</p>
         </div>
 
