--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,18 +3,44 @@
 
 <head th:replace="common/header :: common-header"></head>
 
-<div th:replace="common/navbar :: common-navbar"></div>
-
 <body>
 
-    <div class="container">
+<div th:replace="common/navbar :: common-navbar"></div>
 
-        <div class="starter-template">
-            <h1 th:text="#{index.main.callout}"></h1>
-            <p>First paragraph</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="well">
+                <div class="text-center">
+                    <h1 th:text="#{login.h1.text}"></h1>
+                    <p th:text="#{login.p.text}"></p>
+                </div>
+
+                <div class="text-left">
+                    <form id="loginForm"
+                          th:action="@{/login}"
+                          th:method="post">
+                        <div class="form-group">
+                            <label for="username" th:text="#{login.username.text}" />
+                            <input type="text" id="username" name="username" class="form-control"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" th:text="#{login.password.text}" />
+                            <input type="password" id="password" name="password" class="form-control"/>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" th:text="#{navbar.home.login}" class="btn btn-primary" />
+                        </div>
+
+                    </form>
+                </div>
+            </div>
         </div>
+    </div>
 
-    </div><!-- /.container -->
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
