--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,6 +8,24 @@
 <div th:replace="common/navbar :: common-navbar"></div>
 
 <div class="container">
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
+            <div th:if="${param?.error}" class="alert alert-danger alert-dismissable" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <p th:text="#{login.error.message}"/>
+            </div>
+            <div th:if="${param?.logout}" class="alert alert-success alert-dismissable" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <p th:text="#{login.success.message}"/>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="well">
@@ -31,7 +49,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" th:text="#{navbar.home.login}" class="btn btn-primary" />
+                            <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
                         </div>
 
                     </form>
