--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -51,8 +51,11 @@
                         <div class="form-group">
                             <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
                         </div>
-
                     </form>
+
+
+                    <a th:href="@{/forgotmypassword}"
+                       th:text="#{login.forgot.password.text}" />
                 </div>
             </div>
         </div>
